@@ -7,6 +7,7 @@ Changes in 2.19.1 -- Mai ??, 2016
 * New features:
   - New Manuscript viewer tool, displaying an "engraver's copy",
     contributed by Peter Bjuhr and Urs Liska
+  - Copy selected text in Music View
 * Improvements:
   - Fit Width in Music View now fits two pages in width, if in two-page mode
 * Bug fixes:
